--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@
 /SOLID/obj/project.nuget.cache
 /SOLID/obj/SOLID.csproj.nuget.dgspec.json
 /SOLID/obj/SOLID.csproj.nuget.g.props
+/SOLID/obj/Debug/net8.0/SOLID.GeneratedMSBuildEditorConfig.editorconfig
